resources/assets/less/app.less
@import "../../../node_modules/font-awesome/less/font-awesome";
@import "../../../node_modules/bootstrap/less/bootstrap";
@import (inline) "../../../bower_components/animate.css/animate.css";

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}




#preloader {
    background: #FFF;
    bottom: 0;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 9999;
    padding-top: 70px;

    .logo {
        width: 90%;
        svg {
            fill: black;
            stroke: black;
        }
    }

    @media (min-width: @screen-sm-min) {
        .logo {
            width: 68%;
        }
    }

    @media (min-width: @screen-md-min) {
        .logo {
            width: 45%;
        }
    }

    @media (min-width: @screen-lg-min) {
        .logo {
            width: 650px;
        }
    }
}

section {
    overflow: show;
    display: none;
}

section.intro {
    height: 550px;
    padding-top: 70px;
    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.3);

    h1 {
        font-size: 70px;
    }

    h1, h2, h3, h4, h5, h6 {
        color: white;
    }

    .circles {
        max-width: 780px;
        margin: 0 auto;

        span {
            display: block;
            font-family: "Roboto";
            font-weight: 300;
            margin-top: 0.4em;
            color: white;
        }

        h4 {
            margin: 0px;
            padding: 0px;
            color: white;
        }
    }

    .time_circles {
        position: relative;
        width: 100%;
        height: 100%;
    }

    .time_circles > div {
        position: absolute;
        text-align: center;
    }

    .header {
        .logo {
            width: 90%;
            svg {
                .s0, .s1 {
                    stroke: white;
                }
            }
        }

        h2 {
            font-weight: 100;
            margin: 0;
            font-size: 27px;
        }
    }

    @media (min-width: @screen-sm-min) {
        .header {
            .logo {
                width: 68%;
            }
        }
    }

    @media (min-width: @screen-md-min) {
        .header {
            .logo {
                width: 45%;
            }
        }
    }

    @media (min-width: @screen-lg-min) {
        .header {
            .logo {
                width: 650px;
            }
        }
    }
}

section.timeline {
    background-color: white;

    ul {
        list-style: none;
        position: relative;
        margin: 0;
        padding: 30px 0 20px 0;

        li {
            position: relative;

            .timeline-badge {
                position: absolute;
                left: 25px;
                height: 50px;
                width: 50px;
                border-top-right-radius: 50%;
                border-top-left-radius: 50%;
                border-bottom-right-radius: 50%;
                border-bottom-left-radius: 50%;
                background-color: #5bc0de;
                margin-left: -25px;
                text-align: center;
                color: #fff;
                line-height: 55px;
                font-size: 1.4em;
                top: 16px;
            }

            .media {
                float: right;
                width: 85%;
                background-color: #fff;
                padding: 10px 10px 0;
                border-radius: 4px;
                position: relative;
                border-radius: 4px;
                border: 1px solid #d4d4d4;
                box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
            }

            .media:before {
                left: -12px;
                border-color: transparent red transparent transparent;
                content: '';
                position: absolute;
                top: 34px;
                width: 0;
                height: 0;
                content: '';
                border-style: solid;
                border-width: 6px;
            }
        }
    }

    ul:before {
        content: "";
        width: 3px;
        background-color: #ccd1d9;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 25px;
        margin-left: -1.5px;
    }

    @media (min-width: @screen-sm-min) {
        ul:before {
            left: 50%;
        }

        ul > li {
            .timeline-badge {
                left: 50%;
            }

            .media {
                width: 45%;
            }
        }

        ul > li.pos-left > .media {
            float: left;
        }
    }

    @media (min-width: @screen-md-min) {
        ul > li .media {
            width: 46%;
        }
    }

    @media (min-width: @screen-lg-min) {
        ul > li .media {
            width: 47%;
        }
    }
}






.t{fill:#ffffff;}.s0{fill:none;stroke:#000000;stroke-width:6.54508305;}.s1{fill:none;stroke:#000000;stroke-width:6.88016129;}















.logo {
    margin: auto;
    svg {
        fill: white;
        stroke: white;
    }
}

.uppercase {
    text-transform: uppercase;
}

section.footer {
    background: #1A1A1A;
    text-align: center;
    padding: 10px 0 20px 0;
    position: relative;
    font-size: 18px;
    color: #909090;
    padding-top: 20px;

    .copy {
        font-size: 12px;
    }

    a {
        color:white;
    }

    ul {
        padding: 0;
    }

    .social-icons {
        margin-bottom: 20px;
        margin-top: 15px;

        li {
            display: inline-block;
        }

        i {
            border: 1px solid white;
            border-radius: 50%;
            padding-top: 1px;
            margin: 0 10px;
        }
    }

    .logo {
        width: 200px;
    }
}

.social-icons i {
    width: 35px;
    line-height: 34px;
}

a {
    text-decoration: none;
    color: #444;
}


h1, h2, h3, h4, h5, h6 {
    font-family: "Roboto";
    font-weight: 300;
    color: #333;
}

